--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -4,20 +4,19 @@ on: [push]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["2.7"]
+    runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
-      with:
-        python-version: ${{ matrix.python-version }}
+    - name: Set up Python 2.7
+      run: |
+        sudo add-apt-repository universe
+        sudo apt update
+        sudo apt install -y python2
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install pylint
+        curl https://bootstrap.pypa.io/get-pip.py --output get-pip.py
+        sudo python2 get-pip.py
+        pip2 install pylint
     - name: Analysing the code with pylint
       run: |
         pylint $(git ls-files '*.py')
