--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -14,7 +14,7 @@ jobs:
         sudo apt install -y python2
     - name: Install dependencies
       run: |
-        curl https://bootstrap.pypa.io/get-pip.py --output get-pip.py
+        curl https://bootstrap.pypa.io/pip/2.7/get-pip.py --output get-pip.py
         sudo python2 get-pip.py
         pip2 install pylint
     - name: Analysing the code with pylint
