--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -1,22 +1,27 @@
 name: Pylint
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
+    
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python 2.7
-      run: |
-        sudo add-apt-repository universe
-        sudo apt update
-        sudo apt install -y python2
-    - name: Install dependencies
-      run: |
-        curl https://bootstrap.pypa.io/pip/2.7/get-pip.py --output get-pip.py
-        sudo python2 get-pip.py
-        pip2 install pylint
-    - name: Analysing the code with pylint
-      run: |
-        pylint $(git ls-files '*.py')
+
+      - name: Checkout code
+        uses: actions/checkout@v4
+        
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+          
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pylint
+
+      - name: Analyze the code with Pylint
+        run: |
+          pylint --output-format=colorized $(git ls-files '*.py')
